{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 127,
  "lineage": "29e43866-2bcf-b14f-fb54-0118aa1242ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f5f08cad57bf4ac",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:elastic-ip/eipalloc-04f5f08cad57bf4ac",
            "domain": "vpc",
            "id": "eipalloc-04f5f08cad57bf4ac",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-176-34-19-136.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "176.34.19.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iac2026-toyoizumi-nat-eip"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-nat-eip",
              "Training": "iac2026"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c5058314ac80fd",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:instance/i-0360dae22843decf9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iac2026-toyoizumi-profile-web",
            "id": "i-0360dae22843decf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c6e7aac203a9b13",
            "private_dns": "ip-172-31-2-44.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Owner": "i-0b5a185d26a0bf965",
                  "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
                  "Time": "2026/02/13 10:25"
                },
                "tags_all": {
                  "Createdby": "toyoizumi",
                  "Owner": "i-0b5a185d26a0bf965",
                  "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
                  "Time": "2026/02/13 10:25",
                  "Training": "iac2026"
                },
                "throughput": 125,
                "volume_id": "vol-0e927be2848856f0a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a35ae5f8c06b2649",
            "tags": {
              "Name": "iac2026-toyoizumi-web-1",
              "Owner": "i-0b5a185d26a0bf965",
              "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
              "Time": "2026/02/13 10:25"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-web-1",
              "Owner": "i-0b5a185d26a0bf965",
              "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
              "Time": "2026/02/13 10:25",
              "Training": "iac2026"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c26ad206dfae6559"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_1",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c5058314ac80fd",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:instance/i-0fa73af45c20f0d40",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iac2026-toyoizumi-profile-web",
            "id": "i-0fa73af45c20f0d40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae54395ba8b2e046",
            "private_dns": "ip-172-31-2-54.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Owner": "i-0b5a185d26a0bf965",
                  "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
                  "Time": "2026/02/13 10:25"
                },
                "tags_all": {
                  "Createdby": "toyoizumi",
                  "Owner": "i-0b5a185d26a0bf965",
                  "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
                  "Time": "2026/02/13 10:25",
                  "Training": "iac2026"
                },
                "throughput": 125,
                "volume_id": "vol-0ea285456970b4712",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ead32b13af394ae",
            "tags": {
              "Name": "iac2026-toyoizumi-web-2",
              "Owner": "i-0b5a185d26a0bf965",
              "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
              "Time": "2026/02/13 10:25"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-web-2",
              "Owner": "i-0b5a185d26a0bf965",
              "PrincipalId": "AROA4QG4XJBQALD2RET34:i-0b5a185d26a0bf965",
              "Time": "2026/02/13 10:25",
              "Training": "iac2026"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c26ad206dfae6559"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:internet-gateway/igw-092838cebc5da8983",
            "id": "igw-092838cebc5da8983",
            "owner_id": "859456358496",
            "tags": {
              "Name": "iac2026-toyoizumi-igw"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-igw",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6",
            "arn_suffix": "app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-iac2026-toyoizumi-alb-1612298351.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iac2026-toyoizumi-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d85d18a150a45852"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ead32b13af394ae"
              },
              {
                "subnet_id": "subnet-0a35ae5f8c06b2649"
              }
            ],
            "subnets": [
              "subnet-00ead32b13af394ae",
              "subnet-0a35ae5f8c06b2649"
            ],
            "tags": {
              "Name": "iac2026-toyoizumi-alb"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-alb",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.private_app_1",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:listener/app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6/43cbfc1cb4fef519",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:listener/app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6/43cbfc1cb4fef519",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-toyoizumi-alb/9e36b7ea5037d8c6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Createdby": "toyoizumi",
              "Training": "iac2026"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.private_app_1",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
            "arn_suffix": "targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "iac2026-toyoizumi-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "iac2026-toyoizumi-tg"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-tg",
              "Training": "iac2026"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c-20260213012538848500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
            "target_id": "i-0360dae22843decf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web1",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_1",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c-20260213012538332000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-toyoizumi-tg/06e12ff9ea9d588c",
            "target_id": "i-0fa73af45c20f0d40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web2",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f5f08cad57bf4ac",
            "association_id": "eipassoc-010c853788698e525",
            "connectivity_type": "public",
            "id": "nat-0f1bbd876c68b65d8",
            "network_interface_id": "eni-012e5864ffa219298",
            "private_ip": "172.31.2.11",
            "public_ip": "176.34.19.136",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3ebd70b9eed97ec",
            "tags": {
              "Name": "iac2026-toyoizumi-natgw"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-natgw",
              "Training": "iac2026"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:route-table/rtb-03ad71856a8aa2bc8",
            "id": "rtb-03ad71856a8aa2bc8",
            "owner_id": "859456358496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1bbd876c68b65d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac2026-toyoizumi-rt-private"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-rt-private",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:route-table/rtb-0d11b6810a9b1cf13",
            "id": "rtb-0d11b6810a9b1cf13",
            "owner_id": "859456358496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092838cebc5da8983",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac2026-toyoizumi-rt-public"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-rt-public",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0288f93deb39ac423",
            "route_table_id": "rtb-03ad71856a8aa2bc8",
            "subnet_id": "subnet-0a35ae5f8c06b2649"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_1",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000378a517ee960d4",
            "route_table_id": "rtb-03ad71856a8aa2bc8",
            "subnet_id": "subnet-00ead32b13af394ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_2",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0056a8e4679c6b383",
            "route_table_id": "rtb-03ad71856a8aa2bc8",
            "subnet_id": "subnet-0259fd16412067663"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db_1",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdebeae399c095a6",
            "route_table_id": "rtb-03ad71856a8aa2bc8",
            "subnet_id": "subnet-099ab9fd6549197d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db_2",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0184948fb127b0a29",
            "route_table_id": "rtb-0d11b6810a9b1cf13",
            "subnet_id": "subnet-0b3ebd70b9eed97ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00135cf78bc7e9bdc",
            "route_table_id": "rtb-0d11b6810a9b1cf13",
            "subnet_id": "subnet-091b31bf01f687384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-0d85d18a150a45852",
            "description": "Internal ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d85d18a150a45852",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.2.0/24"
                ],
                "description": "HTTP from allowed CIDR",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iac2026-toyoizumi-sg-alb",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-toyoizumi-sg-alb"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-sg-alb",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-0b5ef43caac7d3602",
            "description": "RDS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5ef43caac7d3602",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c26ad206dfae6559"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "iac2026-toyoizumi-sg-rds",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-toyoizumi-sg-rds"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-sg-rds",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-0c26ad206dfae6559",
            "description": "Web EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c26ad206dfae6559",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d85d18a150a45852"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iac2026-toyoizumi-sg-web",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-toyoizumi-sg-web"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-sg-web",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0a35ae5f8c06b2649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.2.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a35ae5f8c06b2649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-private-app-1"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-private-app-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-00ead32b13af394ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.2.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ead32b13af394ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-private-app-2"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-private-app-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0259fd16412067663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.2.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0259fd16412067663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-private-db-1"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-private-db-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-099ab9fd6549197d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.2.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ab9fd6549197d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-private-db-2"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-private-db-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0b3ebd70b9eed97ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3ebd70b9eed97ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-public-1"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-public-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-091b31bf01f687384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.2.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091b31bf01f687384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-toyoizumi-public-2"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-public-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cd6b534841659d79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:vpc/vpc-0cd6b534841659d79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.2.0/24",
            "default_network_acl_id": "acl-00ece366f8cb6acbd",
            "default_route_table_id": "rtb-007c7644ede7a6fe3",
            "default_security_group_id": "sg-08bfa30fb868d4775",
            "dhcp_options_id": "dopt-0576f3920bcd0bfc2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd6b534841659d79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007c7644ede7a6fe3",
            "owner_id": "859456358496",
            "tags": {
              "Name": "iac2026-toyoizumi-vpc"
            },
            "tags_all": {
              "Createdby": "toyoizumi",
              "Name": "iac2026-toyoizumi-vpc",
              "Training": "iac2026"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}